--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "vue": "^3.2.25",
     "vue-router": "^4.0.14",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vue-waypoint": "^4.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
     "vite": "^2.9.0",
     "bootstrap": "^5.1.3",
-    "sass": "^1.50.0"
+    "sass": "^1.50.0",
+    "axios": "^0.26.1"
   }
 }
