--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/test-utils": "^2.0.2",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
     "jsdom": "^20.0.0",
+    "postcss": "^8.4.14",
+    "sass": "^1.54.0",
+    "sass-loader": "^13.0.2",
+    "tailwindcss": "^3.1.6",
     "vite": "^3.0.1",
     "vitest": "^0.18.1"
   }
