--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
     "jsdom": "^20.0.0",
+    "node-sass": "^7.0.3",
     "postcss": "^8.4.14",
     "sass": "^1.54.0",
     "sass-loader": "^13.0.2",
