--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "sass": "^1.55.0",
     "sass-loader": "^13.0.2",
     "tailwindcss": "^3.1.8",
